<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.android.rickandmortyproject.ui.list.CharacterListViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/chkAlive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alive"
                android:textColor="@color/detailTextColor" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/chkDead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead"
                android:textColor="@color/detailTextColor" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/chkUnknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textColor="@color/detailTextColor" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_edt_search"
            android:hint="@string/search"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/detailTextColor"
            android:textColorHint="@color/detailTextColor"
            app:layout_constraintEnd_toStartOf="@id/btnSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@id/edtSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/edtSearch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtClearAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/clear_all"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/clearTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSearch" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_list_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtClearAll" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_grid_unselect"
            app:layout_constraintStart_toEndOf="@id/icList"
            app:layout_constraintTop_toBottomOf="@id/txtClearAll" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCharacter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icList" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>